--- a/views/_booking_planning.js.erb
+++ b/views/_booking_planning.js.erb
@@ -48,6 +48,7 @@ require(['YSDFormatter', 'jquery', 'ysdtemplate', 'YSDGui', 'jquery.ui', 'jquery
     selectedItemCategoryCode: null,      /* The selected item category code during DRAGGING*/
     selectedItemPosition: null,          /* The selected item position during DRAGGING */
     newReference: null,                  /* New stock reference to assign or reassign */
+    newCategory: null,                   /* New stock reference / category to assign or reassign */
 
     tablePlanningTrHeight: null,         /* The height of a resource row */
     topVisibleItem: null,                /* The top visible stock item reference */
@@ -240,11 +241,13 @@ require(['YSDFormatter', 'jquery', 'ysdtemplate', 'YSDGui', 'jquery.ui', 'jquery
 
 
         bookingPlanningModel.newReference = $($('#planning_table tbody tr')[posTop]).attr('id');
+        bookingPlanningModel.newCategory = $($('#planning_table tbody tr')[posTop]).attr('rel');
 
         // Do the process
         if (bookingPlanningModel.newReference != bookingPlanningModel.selectedReference) {
             //TODO It should be done after reassignation
             $(jQuerySelector).attr('data-resource', bookingPlanningModel.newReference);
+            $(jQuerySelector).attr('data-category', bookingPlanningModel.newCategory)
             bookingPlanningView.setupDraggable(jQuerySelector);
             bookingPlanningModel.reassignResource();
         }
@@ -407,6 +410,7 @@ require(['YSDFormatter', 'jquery', 'ysdtemplate', 'YSDGui', 'jquery.ui', 'jquery
                booking.detail = $(this).attr('data-detail');
                booking.id2 = $(this).attr('data-id-resource');
                booking.category = $(this).attr('data-category');
+               booking.requestedCategory = $(this).attr('data-requested-category');
                booking.notes = $(this).attr('data-notes');
                var html = tmpl('planning_reservation_detail')({booking: booking});
                return html;
@@ -603,7 +607,8 @@ require(['YSDFormatter', 'jquery', 'ysdtemplate', 'YSDGui', 'jquery.ui', 'jquery
 
             var item = bookingPlanningModel.planningData[idx];
             if (item.booking_item_reference != null) {
-                this.showItemInPlanning(item.origin, item.id, item.id2, item.item_id, item.booking_item_reference,
+                this.showItemInPlanning(item.origin, item.id, item.id2, item.item_id,
+                                        item.requested_item_id, item.booking_item_reference,
                                         item.date_from, item.time_from, item.date_to, item.time_to,
                                         item.title, item.planning_color, item.detail, item.notes);
             }
@@ -615,7 +620,7 @@ require(['YSDFormatter', 'jquery', 'ysdtemplate', 'YSDGui', 'jquery.ui', 'jquery
 
     },
 
-    showItemInPlanning(origin, id, idResource, category, resource, dateFrom, timeFrom,
+    showItemInPlanning(origin, id, idResource, category, requestedCategory, resource, dateFrom, timeFrom,
                        dateTo, timeTo, title, backgroundColor, detail, notes) { /* Show an item in the planning */
 
         var dFrom = dateFrom;
@@ -655,7 +660,7 @@ require(['YSDFormatter', 'jquery', 'ysdtemplate', 'YSDGui', 'jquery.ui', 'jquery
                 id: id, origin: origin, idResource: idResource,
                 dateFrom: dateFrom, timeFrom: timeFrom,
                 dateTo: dateTo, timeTo: timeTo,
-                category: category, resource: resource,
+                category: category, resource: resource, requestedCategory: requestedCategory,
                 title: title, detail: detail, notes: notes,
                 backgroundColor: backgroundColor,
                 borderColor: this.lightenDarkenColor(backgroundColor, -40),
@@ -1028,7 +1033,7 @@ require(['YSDFormatter', 'jquery', 'ysdtemplate', 'YSDGui', 'jquery.ui', 'jquery
                       data.forEach(function (item, index, object) {
                           bookingPlanningModel.planningData.push(item);
                           bookingPlanningView.showItemInPlanning(item.origin, item.id, item.id2, item.item_id,
-                              item.booking_item_reference, item.date_from, item.time_from,
+                              item.requested_item_id, item.booking_item_reference, item.date_from, item.time_from,
                               item.date_to, item.time_to, item.title, item.planning_color, item.detail, item.notes)
                       });
                   }
@@ -1181,7 +1186,7 @@ require(['YSDFormatter', 'jquery', 'ysdtemplate', 'YSDGui', 'jquery.ui', 'jquery
                       data.forEach(function (item, index, object) {
                           bookingPlanningModel.planningData.push(item);
                           bookingPlanningView.showItemInPlanning(item.origin, item.id, item.id2, item.item_id,
-                              item.booking_item_reference, item.date_from, item.time_from,
+                              item.requested_item_id, item.booking_item_reference, item.date_from, item.time_from,
                               item.date_to, item.time_to, item.title, item.planning_color, item.detail, item.notes);
                       });
 
@@ -1672,7 +1677,7 @@ require(['YSDFormatter', 'jquery', 'ysdtemplate', 'YSDGui', 'jquery.ui', 'jquery
                       data.forEach(function (item, index, object) {
                           bookingPlanningModel.planningData.push(item);
                           bookingPlanningView.showItemInPlanning(item.origin, item.id, item.id2, item.item_id,
-                              item.booking_item_reference, item.date_from, item.time_from,
+                              item.requested_item_id, item.booking_item_reference, item.date_from, item.time_from,
                               item.date_to, item.time_to, item.title, item.planning_color, item.detail)
                       });
                   }
