--- a/views/config_booking_payment.erb
+++ b/views/config_booking_payment.erb
@@ -16,11 +16,21 @@
           <form name="variables" action="/api/variables" method="PUT"
                 data-remote="ajax" data-remote-method="PUT" class="form-horizontal">
             <%= render_variable_checkbox_boolean('booking.payment', t.booking_settings.form.payment) %>
-            <%= render_variable_input_text('booking.payment_cadence', t.booking_settings.form.payment_cadence, 2, 2) %>
-            <p class="less_contrast_text smaller_text"><%=t.booking_settings.form.payment_cadence_description%></p>
-            <%= render_variable_input_text('booking.deposit', t.booking_settings.form.deposit, 2, 2) %>
-            <p class="less_contrast_text smaller_text"><%=t.booking_settings.form.deposit_description%></p>
-            <%= render_variable_checkbox_boolean('booking.allow_total_payment', t.booking_settings.form.allow_total_payment) %>
+            <div id="renting_payment_settings">
+              <%= render_variable_select('booking.payment_amount_setup',
+                                         t.booking_settings.form.pay_group.title,
+                                         {deposit: t.booking_settings.form.pay_group.deposit,
+                                          total: t.booking_settings.form.pay_group.total}) %>
+              <div id="renting_deposit_settings">
+                <%= render_variable_input_text('booking.deposit', t.booking_settings.form.deposit, 2, 2) %>
+                <p class="less_contrast_text smaller_text"><%=t.booking_settings.form.deposit_description%></p>
+                <%= render_variable_checkbox_boolean('booking.allow_pending_payment', t.booking_settings.form.pay_group.allow_pending_payment) %>
+                <p class="less_contrast_text smaller_text"><%=t.booking_settings.form.pay_group.allow_pending_payment_description%></p>
+              </div>
+              <hr>
+              <%= render_variable_input_text('booking.payment_cadence', t.booking_settings.form.payment_cadence, 2, 2) %>
+              <p class="less_contrast_text smaller_text"><%=t.booking_settings.form.payment_cadence_description%></p>
+            </div>
             <div class="form-group">
               <div class="col-xs-12">
                 <button class="button btn btn-sm btn-primary pull-right" type="submit"><i class="fa fa-save push-5-r"></i> <%=t.entitymanagement.update%></button>
@@ -42,13 +52,22 @@
           <div class="block-content block-content-narrow">
             <form name="variables" action="/api/svariables" method="PUT"
                   data-remote="ajax" data-remote-method="PUT" class="form-horizontal">
-              <%#= render_variable_checkbox_boolean('order.payment', t.booking_settings.form.activities_payment) %>
-              <%= render_variable_input_text('order.payment_cadence', t.booking_settings.form.activities_payment_cadence, 2, 2) %>
-              <p class="less_contrast_text smaller_text"><%=t.booking_settings.form.activities_payment_cadence_description%></p>
-              <%= render_variable_checkbox_boolean('order.allow_deposit_payment', t.booking_settings.form.activities_allow_deposit_payment) %>
-              <%= render_variable_input_text('order.deposit', t.booking_settings.form.activities_deposit, 2, 2) %>
-              <p class="less_contrast_text smaller_text"><%=t.booking_settings.form.deposit_description%></p>
-              <%= render_variable_checkbox_boolean('order.allow_total_payment', t.booking_settings.form.activities_allow_total_payment) %>
+              <%= render_variable_checkbox_boolean('order.payment', t.booking_settings.form.activities_payment) %>
+              <div id="order_payment_settings">
+                <%= render_variable_select('order.payment_amount_setup',
+                                           t.booking_settings.form.payment_group.title,
+                                           {deposit: t.booking_settings.form.pay_group.deposit,
+                                            total: t.booking_settings.form.pay_group.total}) %>
+                <div id="order_deposit_settings">
+                  <%= render_variable_input_text('order.deposit', t.booking_settings.form.deposit, 2, 2) %>
+                  <p class="less_contrast_text smaller_text"><%=t.booking_settings.form.deposit_description%></p>
+                  <%= render_variable_checkbox_boolean('order.allow_pending_payment', t.booking_settings.form.pay_group.allow_pending_payment) %>
+                  <p class="less_contrast_text smaller_text"><%=t.booking_settings.form.pay_group.allow_pending_payment_description%></p>
+                </div>
+                <hr>
+                <%= render_variable_input_text('order.payment_cadence', t.booking_settings.form.activities_payment_cadence, 2, 2) %>
+                <p class="less_contrast_text smaller_text"><%=t.booking_settings.form.activities_payment_cadence_description%></p>
+              </div>
               <div class="form-group">
                 <div class="col-xs-12">
                   <button class="button btn btn-sm btn-primary pull-right" type="submit"><i class="fa fa-save push-5-r"></i> <%=t.entitymanagement.update%></button>
