--- a/views/config_booking_contract.erb
+++ b/views/config_booking_contract.erb
@@ -24,6 +24,21 @@
                 </div>
               </div>
             </form>
+            <% if @show_translations and @tmpl %>
+              <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                  <div class="block block-bordered">
+                    <div class="block-header bg-gray-lighter">
+                      <h3 class="block-title">Traducciones</h3>
+                    </div>
+                    <div class="block-content block-content-narrow">
+                      <div id="contract_container">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            <% end %>
           </div>
         </div>
       </div>
